Fix long description text overflow behaviour in application list

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_container.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_container.scss
@@ -28,6 +28,9 @@
     h2, p {
       margin-bottom: 0.75rem;
     }
+    table th:first-child {
+      width: 1%;
+    }
   }
   .btn {
     border-radius: 10px;
